trying to fix mobile cutoff v6

--- a/styles.css
+++ b/styles.css
@@ -546,9 +546,8 @@ html, body { /*done*/
         margin: 0;
         padding: 0;
         border-radius: 0;
-        margin-top: -75px;
         margin-bottom: 75px;
-        height: calc(100vh - 75px); 
+        height: 100vh; 
     }
 
     .bottomBarMobile { /* the icons are not spaced properly*/
